fix: fixed arrow misalignment

--- a/src/app/components/ArrowIcon/ArrowIcon.module.scss
+++ b/src/app/components/ArrowIcon/ArrowIcon.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import '../../styles/variables.scss';
 
 .container {
     width: 20px;
@@ -15,22 +15,22 @@
 }
 
 .left {
+    position: absolute;
+    width: 12px;
+    height: 3px;
+    background-color: $primary-white;
+    transform: rotate(45deg);
+    top: 50%;
+
+    &--arrow {
         position: absolute;
         width: 12px;
-        height: 3px;
+        height: 0.5px;
         background-color: $primary-white;
         transform: rotate(45deg);
-        top: 50%;
-        
-        &--arrow {
-            position: absolute;
-            width: 12px;
-            height: 0.5px;
-            background-color: $primary-white;
-            transform: rotate(45deg);
-            left: -3px;  
-            top: calc(50% + 6px);
-        }   
+        left: -2px;
+        top: calc(50% + 6px);
+    }
 }
 
 .right {
@@ -41,7 +41,7 @@
     left: calc(50% - 3px);
     top: 50%;
     transform: rotate(-45deg);
-    
+
     &--arrow {
         position: absolute;
         width: 12px;
